added English subject link

--- a/Views/Subject/Details.cshtml
+++ b/Views/Subject/Details.cshtml
@@ -5,10 +5,10 @@
 
 <h2>New heading for Subject List</h2>
 
-
 <ul>
     <li>@Html.ActionLink("Math Details", "Details", new { id = 1 })</li>
     <li>@Html.ActionLink("Science Details", "Details", new { id = 2 })</li>
+    <li>@Html.ActionLink("English Details", "Details", new { id = 3 })</li>
 </ul>
 
 <div class="mt-3">
